# cleanup03

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile_api  Dockerfile_core  Makefile  ObjectCubeMakeGenerated  README.md  clang.sh  docker-compose.yaml  gmon.out  grind.sh  sharedmake
containers/: Dockerfile_base  Dockerfile_core
database/: Dockerfile  schema.sql
docs/: local_devel_macosx.md  local_devel_ubuntu.md
lib/: libcore.dylib
scripts/: boostrap-api.sh  boostrap-cli.sh  common.sh  connect-database.sh  dockerenv  env  env.sh  reset-database.sh  setenv.sh  setup-grpc.sh  start-api.sh  update-api-proto.sh  update-cli-proto.sh  update-core-proto.sh  update-proto.sh
src/: Hub.cpp  Hub.h  ObjectTag.cpp  ObjectTag.h  Search.h
src/core/: CMakeLists.txt  Hub.cpp  Hub.h  Language.cpp  Language.h  Object.cpp  Object.h  ObjectTag.cpp  ObjectTag.h  Search.cpp
src/core/Boundaries/: BoundingBox.cpp  Coordinate2D.cpp  Coordinate2D.h
src/core/Converters/: AlphanumericalTagConverter.h  BoundingBoxConverter.cpp  BoundingBoxConverter.h  Coordinate2DConverter.cpp  DateRangeFilterConverter.cpp  DateRangeFilterConverter.h  DateTagConverter.cpp  DateTagConverter.h  DimensionConverter.cpp  DimensionConverter.h  FilterConverterFactory.cpp  HierarchyNodeConverter.cpp  NumericalRangeFilterConverter.cpp  NumericalRangeFilterConverter.h  ObjectTagConverter.cpp  PluginConverter.h  PluginTagSetConverter.h  RGBTagConverter.h  StateTagConverter.cpp  TagConverter.cpp  TagConverter.h  TagFilterConverter.cpp  TagFilterConverter.h  TagSetConverter.h  TimeRangeFilterConverter.cpp  TimeRangeFilterConverter.h
src/core/DataAccess/Factories/: AlphanumericalTagDataAccessFactory.h  DateRangeFilterDataAccessFactory.cpp  DimensionDataAccessFactory.cpp  DimensionFilterDataAccessFactory.cpp  FilterDataAccessFactory.cpp  FilterDataAccessFactory.h  HierarchyNodeDataAccessFactory.h  HubDataAccessFactory.h  LanguageDataAccessFactory.cpp  LanguageDataAccessFactory.h  NumericalRangeFilterDataAccessFactory.h  NumericalTagDataAccessFactory.cpp  NumericalTagDataAccessFactory.h  ObjectTagDataAccessFactory.h  PluginDataAccessFactory.cpp  PluginTagSetDataAccessFactory.cpp  RGBTagDataAccessFactory.h  SearchDataAccessFactory.h  TagDataAccessFactory.cpp  TagDataAccessFactory.h  TimeTagDataAccessFactory.cpp  TimeTagDataAccessFactory.h
src/core/DataAccess/PostgreSQL/: AlphanumericalTagPostgreSQL.cpp  CommonPostgreSQL.cpp  CommonPostgreSQL.h  DateRangeFilterPostgreSQL.cpp  DateRangeFilterPostgreSQL.h  DateTagPostgreSQL.cpp  DimensionFilterPostgreSQL.cpp  HierarchyNodePostgreSQL.cpp  HierarchyNodePostgreSQL.h  HubPostgreSQL.cpp  HubPostgreSQL.h  LanguagePostgreSQL.cpp  NumericalRangeFilterPostgreSQL.h  NumericalTagPostgreSQL.h  ObjectPostgreSQL.cpp  ObjectPostgreSQL.h  ObjectTagPostgreSQL.cpp  ObjectTagPostgreSQL.h  PluginPostgreSQL.cpp  PluginPostgreSQL.h  PluginTagSetPostgreSQL.h  RGBTagPostgreSQL.h  TimeTagPostgreSQL.h
src/core/DataAccess/Root/: BoundingBoxDataAccess.h  Coordinate2DDataAccess.h  DateTagDataAccess.h  DimensionFilterDataAccess.cpp  FilterDataAccess.cpp  HierarchyNodeDataAccess.cpp  HierarchyNodeDataAccess.h  HubDataAccess.cpp  NumericalRangeFilterDataAccess.cpp  NumericalRangeFilterDataAccess.h  NumericalTagDataAccess.cpp  NumericalTagDataAccess.h  ObjectTagDataAccess.h  PluginDataAccess.cpp  RGBTagDataAccess.h  SearchDataAccess.cpp  SearchDataAccess.h  StateObjectDataAccess.h  StateTagDataAccess.cpp  StateTagDataAccess.h  TagDataAccess.cpp  TagDataAccess.h  TagSetDataAccess.h  TimeRangeFilterDataAccess.h  TimeTagDataAccess.cpp  TimeTagDataAccess.h
src/core/Filters/: DateRangeFilter.cpp  DateRangeFilter.h  DimensionFilter.h  Filter.cpp  Filter.h  FilterFactory.h  TimeRangeFilter.cpp  TimeRangeFilter.h
src/core/Hierarchy/: DefaultDimension.h  Dimension.cpp  DimensionFactory.h  HierarchyNode.h  PersistentHierarchyNode.cpp  TagBasedHierarchyNode.cpp  VirtualDimension.cpp  VirtualDimension.h  VirtualHierarchyNode.h
src/core/LayerShared/: DebugInfo.cpp  DimensionCommon.h  Exception.h  FilterCommon.h  HierarchyNodeCommon.h  HubCommon.cpp  HubCommon.h  MemoryManagement.h  Parameters.cpp  Parameters.h  RegExSupport.h  SharedDefinitions.h  StringSupport.h  TagSetCommon.h
src/core/Plugin/: Plugin.cpp  PluginCommon.h  PluginLibrary.cpp  PluginLibrary.h  PluginReply.cpp  PluginServer.cpp  PluginServer.h  PluginTagging.cpp  PluginTagging.h  ProcessObjectServer.cpp  ProcessObjectServer.h
src/core/State/: MultiDimensionalView.cpp  MultiDimensionalView.h  State.h  StateDimension.cpp  StateDimensionNode.cpp  StateObject.cpp  StateObject.h  StateTag.cpp
src/core/Tag/: AlphanumericalTag.cpp  DateTag.cpp  NumericalTag.cpp  NumericalTag.h  RGBTag.cpp  Tag.cpp  Tag.h  TagFactory.cpp  TimeTag.cpp  TimeTag.h
src/core/TagSet/: AlphanumericalTagSet.h  DateTagSet.h  TagSet.h  TagSetFactory.cpp  TagSetFactory.h  TimeTagSet.cpp
src/core/proto/: OC.grpc.pb.cc  OC.grpc.pb.h  OC.pb.cc  OC.pb.h
src/core/server/: CMakeLists.txt  Makefile  clientTest.cc  clientTest.cpp  convert.cc  convert.cpp  convert.h  serverImpl.cc  serverImpl.cpp
src/proto/: CMakeLists.txt  MADS.grpc.pb.cc  MADS.grpc.pb.h  MADS.pb.cc  MADS.pb.h  MADS.proto  Makefile  OC.grpc.pb.cc  OC.grpc.pb.h  OC.pb.cc  OC.pb.h  OC.proto
src/wrapper/: CMakeLists.txt  ObjectCube_boost.cpp
test/: AlphanumericalTagSetTest.cpp  AlphanumericalTagSetTest.h  AlphanumericalTagTest.cpp  AlphanumericalTagTest.h  AssertionTraitsCommon.h  BoundingBoxAssertionTraits.h  CommonSQLiteTest.cpp  CommonSQLiteTest.h  DateRangeFilterTest.cpp  DateRangeFilterTest.h  DateSupportTest.cpp  DateSupportTest.h  DateTagSetTest.cpp  DateTagSetTest.h  DateTagTest.cpp  DateTagTest.h  DefaultDimensionTest.cpp  DefaultDimensionTest.h  DimensionAssertionTraits.h  DimensionFilterTest.cpp  DimensionFilterTest.h  HierarchyNodeAssertionTraits.h  HubTest.cpp  HubTest.h  LanguageTest.cpp  LanguageTest.h  NumericalRangeFilterTest.cpp  NumericalRangeFilterTest.h  NumericalTagSetTest.cpp  NumericalTagSetTest.h  NumericalTagTest.cpp  NumericalTagTest.h  ObjectAssertionTraits.h  ObjectTest.cpp  (+51 more)
(+191 files in other folders)
